syntax = "proto3";

enum Cmd {
    Begin = 0;
    Clear = 1;
    Snapshot = 2;
    Restore = 3;
    End = 4;
}

enum Resp {
    BeginAck = 0;
    ClearAck = 1;
    SnapshotAck = 2;
    RestoreAck = 3;
    EndAck = 4;
}

message SnapshotReq {
    Cmd cmd = 1;
    uint64 start_height = 2;
    uint64 end_height = 3;
    string file = 4;
}


message SnapshotResp {
    Resp resp = 1;
}



